xcgui.h


//对象类型决定功能
//对象样式决定外观

/// @defgroup groupObjectType 接口句柄类型
/// @ingroup macroDefine
/// @{
/// 炫彩对象类型
enum XC_OBJECT_TYPE  ///<炫彩对象类型
{
	XC_ERROR                 =-1,   ///<错误类型
	XC_NOTHING               =0,
	XC_WINDOW                =1,    ///<窗口
	XC_MODALWINDOW           =2,    ///<模态窗口
	XC_FRAMEWND              =3,    ///<框架窗口
	XC_FLOATWND              =4,    ///<浮动窗口
	XC_COMBOBOXWINDOW        =11,   //comboBoxWindow_        组合框弹出下拉列表窗口
	XC_POPUPMENUWINDOW       =12 ,  //popupMenuWindow_       弹出菜单主窗口
	XC_POPUPMENUCHILDWINDOW  =13,   //popupMenuChildWindow_  弹出菜单子窗口
	XC_OBJECT_UI      =19,   ///<...
	XC_WIDGET_UI      =20,
	//元素
	XC_ELE            =21,   ///<基础元素
	XC_ELE_LAYOUT     =53,   ///<布局元素
	XC_BUTTON         =22,   ///<按钮
	XC_EDIT           =45,   ///<富文本编辑框
	XC_EDITOR         =46,
	XC_RICHEDIT       =23,   ///<富文本编辑框
	XC_COMBOBOX       =24,   ///<下拉组合框元素
	XC_SCROLLBAR      =25,   ///<滚动条元素
	XC_SCROLLVIEW     =26,   ///<滚动视图元素
	XC_LIST           =27,   ///<列表元素
	XC_LISTBOX        =28,   ///<列表框元素
	XC_LISTVIEW       =29,   ///<列表视图,大图标
	XC_TREE           =30,   ///<树元素
	XC_MENUBAR        =31,   ///<菜单条
	XC_SLIDERBAR      =32,   ///<滑动条
	XC_PROGRESSBAR    =33,   ///<进度条
	XC_TOOLBAR        =34,   ///<工具条
	XC_MONTHCAL       =35,   ///<月历元素
	XC_DATETIME       =36,   ///<时间元素
	XC_PROPERTYGRID   =37,   ///<属性网格
	XC_RICHEDIT_COLOR =38,   ///<颜色选择元素
	XC_RICHEDIT_SET   =39,   ///<...
	XC_TABBAR         =40,   ///<tab条
	XC_TEXTLINK       =41,   ///<文本链接按钮

	XC_PANE                 =42,   ///<布局窗格
	XC_PANE_SPLIT           =43,   ///<布局窗格拖动分割条
	XC_MENUBAR_BUTTON       =44,   ///<菜单条上的按钮
//	XC_TOOLBAR_BUTTON       =45,   ///<工具条上按钮
//	XC_PROPERTYPAGE_LABEL   =46,   ///<属性页标签按钮
//	XC_PIER                 =47,   ///<窗格停靠码头
//	XC_BUTTON_MENU          =48,   ///<弹出菜单按钮
//	XC_VIRTUAL_ELE          =49,   ///<虚拟元素
	XC_RICHEDIT_FILE        =50,   ///<RichEditFile 文件选择编辑框
	XC_RICHEDIT_FOLDER      =51,   ///<RichEditFolder  文件夹选择编辑框
	XC_LIST_HEADER          =52,   ///<列表头元素

	XC_SHAPE             =61,    ///<形状对象
	XC_SHAPE_TEXT        =62,    ///<形状对象-文本
	XC_SHAPE_PICTURE     =63,    ///<形状对象-图片
	XC_SHAPE_RECT        =64,    ///<形状对象-矩形
	XC_SHAPE_ELLIPSE     =65,    ///<形状对象-圆
	XC_SHAPE_LINE        =66,    ///<形状对象-直线
	XC_SHAPE_GROUPBOX    =67,    ///<形状对象-组框
	XC_SHAPE_GIF         =68,    ///<形状对象-GIF

	//其他类型
	XC_MENU              =81,   ///<弹出菜单
	XC_IMAGE             =82,         ///<图片
	XC_IMAGE_TEXTURE     =XC_IMAGE,   ///<图片纹理,图片源,图片素材
	XC_HDRAW             =83,   ///<绘图操作
	XC_FONT              =84,   ///<炫彩字体
	XC_FLASH             =85,   ///<flash   
	XC_PANE_CELL         =86,   ///<...
	XC_WEB               =87,   ///<...
	XC_IMAGE_FRAME       =88,   ///<图片帧,指定图片的渲染属性

	XC_LAYOUT_OBJECT      =101,   ///<布局对象LayoutObject
	XC_ADAPTER            =102,   ///<...
	XC_ADAPTER_TABLE      =103,   ///<数据适配器AdapterTable
	XC_ADAPTER_TREE       =104,   ///<数据适配器AdapterTree
	XC_ADAPTER_LISTVIEW   =105,   ///<数据适配器AdapterListView
	XC_ADAPTER_MAP        =106,   ///<数据适配器AdapterMap
	
	XC_BKINFOM               =116, //背景管理器

	//无实体对象,只是用来判断布局
	XC_LAYOUT_LISTVIEW       =111,
	XC_LAYOUT_LIST           =112,
	XC_LAYOUT_OBJECT_GROUP   =113,
	XC_LAYOUT_OBJECT_ITEM    =114,
	XC_LAYOUT_PANEL          =115,

	//无实体对象,只是用来判断类型
	XC_LIST_ITEM=121,     //列表项模板 list_item
	XC_LISTVIEW_GROUP=122,
	XC_LISTVIEW_ITEM=123,
	//XC_BUTTON_EX,
};


///@}


/// @defgroup groupObjectTypeEx   对象扩展类型
/// @ingroup macroDefine
/// @{
enum XC_OBJECT_TYPE_EX
{
	xc_ex_error=-1,   ///<错误类型
	button_type_default=0, ///<默认类型
	button_type_radio,     ///<单选按钮
	button_type_check,     ///<复选按钮
	button_type_close,     ///<窗口关闭按钮
	button_type_min,       ///<窗口最小化按钮
	button_type_max,       ///<窗口最大化还原按钮

	element_type_layout,   ///<布局元素,启用布局功能的元素
};


///@}


/// @defgroup groupObjectStyle 对象样式(用于区分外观)
/// @ingroup macroDefine
/// @{
enum  XC_OBJECT_STYLE
{
	xc_style_default                =0,
	button_style_default            = xc_style_default,  ///<默认风格
	button_style_check              =1,    ///<复选按钮
	button_style_radio              =2,    ///<单选按钮
	button_style_expand             =3,    ///<展开收缩按钮
	button_style_scrollbar_left     =4,    ///<水平滚动条,左按钮
	button_style_scrollbar_right    =5,    ///<水平滚动条,右按钮
	button_style_scrollbar_up       =6,    ///<垂直滚动条,上按钮
	button_style_scrollbar_down     =7,    ///<垂直滚动条,下按钮
	button_style_scrollbar_slider_h =8,    ///<水平滚动条,滑块
	button_style_scrollbar_slider_v =9,    ///<垂直滚动条,滑块
	button_style_tabBar_button      =10,   ///<TabBar上的标签按钮
	button_style_toolBar_left       =11,   ///<ToolBar左滚动按钮
	button_style_toolBar_right      =12,   ///<ToolBar右滚动按钮

	button_style_pane_close         =13,   ///<窗格关闭按钮
	button_style_pane_lock          =14,   ///<窗格锁定按钮
	button_style_pane_menu          =15,   ///<窗格下拉菜单按钮
	button_style_pane_dockH         =16,   ///<框架窗口左边或右边码头上按钮
	button_style_pane_dockV         =17,   ///<框架窗口上边或下边码头上按钮

	xc_style_frameWnd_dock_left     =18,   ///<框架窗口停靠码头
	xc_style_frameWnd_dock_top      =19,   ///<框架窗口停靠码头
	xc_style_frameWnd_dock_right    =20,   ///<框架窗口停靠码头
	xc_style_frameWnd_dock_bottom   =21,   ///<框架窗口停靠码头

	xc_style_ToolBar_separator      =22,   ///<工具条上的分割线
	xc_style_listBox_comboBox       =23,   ///<下拉组合框弹出的listBox

	//xc_style_richEdit_onlyRead      =23,   ///<编辑框只读模式
};

/// @defgroup groupHandle 句柄列表
/// @ingroup macroDefine
/// @{
typedef void*   HXCGUI;       ///<资源句柄
typedef   struct lua_State lua_State;

typedef int  (CALLBACK *funCallUiThread)(int data);


///@}

/// @defgroup group_monthCal_button_type_    月历元素上的按钮类型
/// @ingroup macroDefine
/// @{
enum monthCal_button_type_
{
	monthCal_button_type_today = 0,  ///< 今天按钮
	monthCal_button_type_last_year,  ///< 上一年
	monthCal_button_type_next_year,  ///< 下一年
	monthCal_button_type_last_month, ///< 上一月
	monthCal_button_type_next_month, ///< 下一月
};

XC_API void WINAPI XDateTime_SetTime(HELE hEle, int nHour, int nMinute, int nSecond);

XC_API void WINAPI XDateTime_GetDate(HELE hEle, int* pnYear, int* pnMonth, int* pnDay);

XC_API void WINAPI XDateTime_SetDate(HELE hEle, int nYear, int nMonth, int nDay);

XC_API COLORREF WINAPI XDateTime_GetSelBkColor(HELE hEle);

XC_API void WINAPI XDateTime_SetSelBkColor(HELE hEle, COLORREF crSelectBk, BYTE alpha = 255);

XC_API HELE WINAPI XDateTime_GetButton(HELE hEle, int nType);

XC_API HELE WINAPI XMonthCal_Create(int x, int y, int cx, int cy, HXCGUI hParent);

XC_API void WINAPI XMonthCal_SetToday(HELE hEle, int nYear, int nMonth, int nDay);

XC_API void WINAPI XMonthCal_GetToday(HELE hEle, int* pnYear, int* pnMonth, int* pnDay);

XC_API void WINAPI XMonthCal_SeSelDate(HELE hEle, int nYear, int nMonth, int nDay);

XC_API void WINAPI XMonthCal_GetSelDate(HELE hEle, int* pnYear, int* pnMonth, int* pnDay);

XC_API HELE WINAPI XMonthCal_GetButton(HELE hEle, monthCal_button_type_ nType);

XC_API lua_State* WINAPI XC_InitLua();

XC_API BOOL WINAPI XC_RunLua(const char*  pLuaFile);

XC_API BOOL WINAPI XC_ExitLua();

XC_API int WINAPI XC_UnicodeToAnsi(const wchar_t *pIn, int inLen, char *pOut, int outLen);

XC_API int WINAPI XC_AnsiToUnicode(const char *pIn, int inLen, wchar_t *pOut, int outLen);

XC_API int     WINAPI XC_MessageBox(HWINDOW hWindow, const wchar_t* pText, const wchar_t* pCaption, int nFlags);

XC_API LRESULT WINAPI XC_SendMessage(HWINDOW hWindow, UINT msg, WPARAM wParam, LPARAM lParam);

XC_API BOOL    WINAPI XC_PostMessage(HWINDOW hWindow, UINT msg, WPARAM wParam, LPARAM lParam);

XC_API int WINAPI XC_CallUiThread(funCallUiThread pCall, int data);

XC_API void WINAPI XC_DebugToFileInfo(const char *pInfo);//打印调试信息到文件 xcgui_debug.txt
XC_API BOOL WINAPI XC_IsHELE(HXCGUI hEle); //检查句柄
XC_API BOOL WINAPI XC_IsHWINDOW(HXCGUI hWindow); //检查句柄
XC_API BOOL WINAPI XC_IsShape(HXCGUI hShape); //检查句柄
XC_API BOOL WINAPI XC_IsHXCGUI(HXCGUI hXCGUI, XC_OBJECT_TYPE nType);

XC_API HWINDOW WINAPI XC_hWindowFromHWnd(HWND hWnd);

XC_API BOOL    WINAPI XC_SetActivateTopWindow();

XC_API BOOL WINAPI XC_SetProperty(HXCGUI hXCGUI, const wchar_t* pName, const wchar_t* pValue);

XC_API const wchar_t* WINAPI XC_GetProperty(HXCGUI hXCGUI, const wchar_t* pName);

XC_API BOOL WINAPI XC_RegisterWindowClassName(const wchar_t* pClassName); //注册窗口类名
XC_API BOOL WINAPI XC_IsSViewExtend(HELE hEle);  //判断元素是否从滚动视图元素扩展的新元素,包含滚动视图元素
XC_API XC_OBJECT_TYPE WINAPI XC_GetObjectType(HXCGUI hXCGUI);

XC_API HXCGUI WINAPI XC_GetObjectByID(HWINDOW hWindow, int nID); //通过ID获取对象句柄
XC_API HXCGUI WINAPI XC_GetObjectByIDName(HWINDOW hWindow, const wchar_t*  pName);

XC_API HXCGUI WINAPI XC_GetObjectByUID(int nUID);

XC_API HXCGUI WINAPI XC_GetObjectByUIDName(const wchar_t*  pName);

XC_API HXCGUI WINAPI XC_GetObjectByName(const wchar_t*  pName);

XC_API void WINAPI XC_SetPaintFrequency(int nMilliseconds); //设置UI绘制频率
XC_API void WINAPI XC_SetTextRenderingHint(int  nType);   //设置文本渲染质量
XC_API BOOL WINAPI XC_RectInRect(RECT *pRect1, RECT *pRect2);

XC_API void WINAPI XC_CombineRect(RECT *pDest, RECT *pSrc1, RECT *pSrc2);

XC_API void WINAPI XC_ShowLayoutFrame(BOOL bShow);

XC_API void WINAPI XC_EnableDebugFile(BOOL bEnable);

XC_API void WINAPI XC_EnableResMonitor(BOOL bEnable);

XC_API void WINAPI XC_SetLayoutFrameColor(COLORREF color);

XC_API void WINAPI XC_EnableErrorMessageBox(BOOL bEnabel);

XC_API void WINAPI XC_EnableAutoExitApp(BOOL bEnabel);

XC_API HXCGUI WINAPI XC_LoadLayout(const wchar_t *pFileName, HXCGUI hParent = NULL);

XC_API HXCGUI WINAPI XC_LoadLayoutZip(const wchar_t *pZipFileName, const wchar_t *pFileName, const wchar_t* pPassword = NULL, HXCGUI hParent = NULL);

XC_API HXCGUI WINAPI XC_LoadLayoutFromString(const char *pStringXML, HXCGUI hParent = NULL);

XC_API BOOL WINAPI XC_LoadResource(const wchar_t *pFileName);

XC_API BOOL WINAPI XC_LoadResourceZip(const wchar_t *pZipFileName, const wchar_t *pFileName, const wchar_t* pPassword = NULL);

XC_API BOOL WINAPI XC_LoadResourceFromString(const char *pStringXML, const wchar_t* pFileName);

XC_API BOOL WINAPI XC_LoadStyle(const wchar_t *pFileName);

XC_API BOOL WINAPI XC_LoadStyleZip(const wchar_t *pZipFile, const wchar_t *pFileName, const wchar_t* pPassword = NULL);

XC_API void WINAPI XC_GetTextSize(const wchar_t* pString, int length, HFONTX hFontX, out_ SIZE* pOutSize);

XC_API void WINAPI XC_GetTextShowSize(const wchar_t* pString, int length, HFONTX hFontX, out_ SIZE* pOutSize);

XC_API HFONTX WINAPI XC_GetDefaultFont(); //获取默认字体
XC_API void   WINAPI XC_SetDefaultFont(HFONTX hFontX); //设置默认字体
XC_API void  WINAPI XC_AddFileSearchPath(const wchar_t* pPath);

XC_API void  WINAPI XC_InitFont(LOGFONTW *pFont, wchar_t *pName, int size, BOOL bBold = FALSE, BOOL bItalic = FALSE, BOOL bUnderline = FALSE, BOOL bStrikeOut = FALSE);

XC_API  void* WINAPI XC_Malloc(int size);

XC_API  void  WINAPI XC_Free(void *p);

XC_API void WINAPI _XC_SetType(HXCGUI hXCGUI, XC_OBJECT_TYPE nType);

XC_API void WINAPI _XC_AddType(HXCGUI hXCGUI, XC_OBJECT_TYPE nType);

XC_API void WINAPI _XC_BindData(HXCGUI hXCGUI, int data);

XC_API int  WINAPI _XC_GetBindData(HXCGUI hXCGUI);

XC_API void WINAPI  XC_Alert(const wchar_t* pText, const wchar_t* pTitle);

XC_API void* WINAPI XC_Sys_ShellExecute(HWND hwnd, const wchar_t* lpOperation, const wchar_t* lpFile, const wchar_t* lpParameters, const wchar_t* lpDirectory, int nShowCmd);

XC_API HMODULE WINAPI XC_LoadLibrary(const wchar_t* lpFileName);

XC_API FARPROC WINAPI XC_GetProcAddress(HMODULE hModule, LPCSTR  lpProcName);

XC_API BOOL    WINAPI XC_FreeLibrary(HMODULE hModule);

XC_API HMODULE WINAPI XC_LoadDll(const wchar_t* pDllFileName);

XC_API BOOL WINAPI XInitXCGUI(wchar_t *pText = NULL);

XC_API void WINAPI XRunXCGUI();

XC_API void WINAPI XExitXCGUI();

XC_API void WINAPI XC_PostQuitMessage(int nExitCode);

XC_API XC_OBJECT_TYPE    WINAPI XObj_GetType(HXCGUI hXCGUI);

XC_API XC_OBJECT_TYPE    WINAPI XObj_GetTypeBase(HXCGUI hXCGUI);

XC_API XC_OBJECT_TYPE_EX WINAPI XObj_GetTypeEx(HXCGUI hXCGUI);

XC_API void              WINAPI XUI_SetStyle(HXCGUI hXCGUI, XC_OBJECT_STYLE nStyle);

XC_API XC_OBJECT_STYLE   WINAPI XUI_GetStyle(HXCGUI hXCGUI);

XC_API BOOL   WINAPI XWidget_IsShow(HXCGUI hXCGUI);