xcgui.nim


proc XDateTime_SetTime*(hEle: HELE; nHour: cint; nMinute: cint; nSecond: cint) {.cdecl,
    importc: "XDateTime_SetTime", dynlib: xcgui, discardable.}

proc XDateTime_GetDate*(hEle: HELE; pnYear: ptr cint; pnMonth: ptr cint; pnDay: ptr cint) {.
    cdecl, importc: "XDateTime_GetDate", dynlib: xcgui, discardable.}

proc XDateTime_SetDate*(hEle: HELE; nYear: cint; nMonth: cint; nDay: cint) {.cdecl,
    importc: "XDateTime_SetDate", dynlib: xcgui, discardable.}

proc XDateTime_GetSelBkColor*(hEle: HELE): COLORREF {.cdecl,
    importc: "XDateTime_GetSelBkColor", dynlib: xcgui, discardable.}

proc XDateTime_SetSelBkColor*(hEle: HELE; crSelectBk: COLORREF; alpha: BYTE = 255) {.
    cdecl, importc: "XDateTime_SetSelBkColor", dynlib: xcgui, discardable.}

proc XDateTime_GetButton*(hEle: HELE; nType: cint): HELE {.cdecl,
    importc: "XDateTime_GetButton", dynlib: xcgui, discardable.}

proc XMonthCal_Create*(x: cint; y: cint; cx: cint; cy: cint; hParent: HXCGUI): HELE {.cdecl,
    importc: "XMonthCal_Create", dynlib: xcgui, discardable.}

proc XMonthCal_SetToday*(hEle: HELE; nYear: cint; nMonth: cint; nDay: cint) {.cdecl,
    importc: "XMonthCal_SetToday", dynlib: xcgui, discardable.}

proc XMonthCal_GetToday*(hEle: HELE; pnYear: ptr cint; pnMonth: ptr cint; pnDay: ptr cint) {.
    cdecl, importc: "XMonthCal_GetToday", dynlib: xcgui, discardable.}

proc XMonthCal_SeSelDate*(hEle: HELE; nYear: cint; nMonth: cint; nDay: cint) {.cdecl,
    importc: "XMonthCal_SeSelDate", dynlib: xcgui, discardable.}

proc XMonthCal_GetSelDate*(hEle: HELE; pnYear: ptr cint; pnMonth: ptr cint;
                          pnDay: ptr cint) {.cdecl, importc: "XMonthCal_GetSelDate",
    dynlib: xcgui, discardable.}

#~ proc XMonthCal_GetButton*(hEle: HELE; nType: monthCal_button_type_): HELE {.cdecl,
    #~ importc: "XMonthCal_GetButton", dynlib: xcgui, discardable.}

#~ proc XC_InitLua*(): ptr lua_State {.cdecl, importc: "XC_InitLua", dynlib: xcgui, discardable.}
#~ proc XC_RunLua*(pLuaFile: cstring): BOOL {.cdecl, importc: "XC_RunLua", dynlib: xcgui, discardable.}
#~ proc XC_ExitLua*(): BOOL {.cdecl, importc: "XC_ExitLua", dynlib: xcgui, discardable.}


proc XC_UnicodeToAnsi*(pIn: ptr WCHAR; inLen: cint; pOut: cstring; outLen: cint): cint {.
    cdecl, importc: "XC_UnicodeToAnsi", dynlib: xcgui, discardable.}

proc XC_AnsiToUnicode*(pIn: cstring; inLen: cint; pOut: ptr WCHAR; outLen: cint): cint {.
    cdecl, importc: "XC_AnsiToUnicode", dynlib: xcgui, discardable.}

proc XC_MessageBox*(hWindow: HWINDOW; pText: ptr WCHAR; pCaption: ptr WCHAR;
                   nFlags: cint): cint {.cdecl, importc: "XC_MessageBox",
                                      dynlib: xcgui, discardable.}

proc XC_SendMessage*(hWindow: HWINDOW; msg: UINT; wParam: WPARAM; lParam: LPARAM): LRESULT {.
    cdecl, importc: "XC_SendMessage", dynlib: xcgui, discardable.}

proc XC_PostMessage*(hWindow: HWINDOW; msg: UINT; wParam: WPARAM; lParam: LPARAM): BOOL {.
    cdecl, importc: "XC_PostMessage", dynlib: xcgui, discardable.}

#~ proc XC_CallUiThread*(pCall: funCallUiThread; data: cint): cint {.cdecl,
    #~ importc: "XC_CallUiThread", dynlib: xcgui, discardable.}


proc XC_DebugToFileInfo*(pInfo: cstring) {.cdecl, importc: "XC_DebugToFileInfo",
                                        dynlib: xcgui, discardable.}
## 打印调试信息到文件 xcgui_debug.txt


proc XC_IsHELE*(hEle: HXCGUI): BOOL {.cdecl, importc: "XC_IsHELE", dynlib: xcgui, discardable.}
## 检查句柄


proc XC_IsHWINDOW*(hWindow: HXCGUI): BOOL {.cdecl, importc: "XC_IsHWINDOW",
                                        dynlib: xcgui, discardable.}
## 检查句柄


proc XC_IsShape*(hShape: HXCGUI): BOOL {.cdecl, importc: "XC_IsShape", dynlib: xcgui, discardable.}
## 检查句柄


proc XC_IsHXCGUI*(hXCGUI: HXCGUI; nType: XC_OBJECT_TYPE): BOOL {.cdecl,
    importc: "XC_IsHXCGUI", dynlib: xcgui, discardable.}

proc XC_hWindowFromHWnd*(hWnd: HWND): HWINDOW {.cdecl, importc: "XC_hWindowFromHWnd",
    dynlib: xcgui, discardable.}

proc XC_SetActivateTopWindow*(): BOOL {.cdecl, importc: "XC_SetActivateTopWindow",
                                     dynlib: xcgui, discardable.}

proc XC_SetProperty*(hXCGUI: HXCGUI; pName: ptr WCHAR; pValue: ptr WCHAR): BOOL {.
    cdecl, importc: "XC_SetProperty", dynlib: xcgui, discardable.}

proc XC_GetProperty*(hXCGUI: HXCGUI; pName: ptr WCHAR): ptr WCHAR {.cdecl,
    importc: "XC_GetProperty", dynlib: xcgui, discardable.}

proc XC_RegisterWindowClassName*(pClassName: ptr WCHAR): BOOL {.cdecl,
    importc: "XC_RegisterWindowClassName", dynlib: xcgui, discardable.}
## 注册窗口类名


proc XC_IsSViewExtend*(hEle: HELE): BOOL {.cdecl, importc: "XC_IsSViewExtend",
                                       dynlib: xcgui, discardable.}
## 判断元素是否从滚动视图元素扩展的新元素,包含滚动视图元素


proc XC_GetObjectType*(hXCGUI: HXCGUI): XC_OBJECT_TYPE {.cdecl,
    importc: "XC_GetObjectType", dynlib: xcgui, discardable.}

proc XC_GetObjectByID*(hWindow: HWINDOW; nID: cint): HXCGUI {.cdecl,
    importc: "XC_GetObjectByID", dynlib: xcgui, discardable.}
## 通过ID获取对象句柄


proc XC_GetObjectByIDName*(hWindow: HWINDOW; pName: ptr WCHAR): HXCGUI {.cdecl,
    importc: "XC_GetObjectByIDName", dynlib: xcgui, discardable.}

proc XC_GetObjectByUID*(nUID: cint): HXCGUI {.cdecl, importc: "XC_GetObjectByUID",
    dynlib: xcgui, discardable.}

proc XC_GetObjectByUIDName*(pName: ptr WCHAR): HXCGUI {.cdecl,
    importc: "XC_GetObjectByUIDName", dynlib: xcgui, discardable.}

proc XC_GetObjectByName*(pName: ptr WCHAR): HXCGUI {.cdecl,
    importc: "XC_GetObjectByName", dynlib: xcgui, discardable.}

proc XC_SetPaintFrequency*(nMilliseconds: cint) {.cdecl,
    importc: "XC_SetPaintFrequency", dynlib: xcgui, discardable.}
## 设置UI绘制频率


proc XC_SetTextRenderingHint*(nType: cint) {.cdecl,
    importc: "XC_SetTextRenderingHint", dynlib: xcgui, discardable.}
## 设置文本渲染质量


proc XC_RectInRect*(pRect1: ptr RECT; pRect2: ptr RECT): BOOL {.cdecl,
    importc: "XC_RectInRect", dynlib: xcgui, discardable.}

proc XC_CombineRect*(pDest: ptr RECT; pSrc1: ptr RECT; pSrc2: ptr RECT) {.cdecl,
    importc: "XC_CombineRect", dynlib: xcgui, discardable.}

proc XC_ShowLayoutFrame*(bShow: BOOL) {.cdecl, importc: "XC_ShowLayoutFrame",
                                     dynlib: xcgui, discardable.}

proc XC_EnableDebugFile*(bEnable: BOOL) {.cdecl, importc: "XC_EnableDebugFile",
                                       dynlib: xcgui, discardable.}

proc XC_EnableResMonitor*(bEnable: BOOL) {.cdecl, importc: "XC_EnableResMonitor",
                                        dynlib: xcgui, discardable.}

proc XC_SetLayoutFrameColor*(color: COLORREF) {.cdecl,
    importc: "XC_SetLayoutFrameColor", dynlib: xcgui, discardable.}

proc XC_EnableErrorMessageBox*(bEnabel: BOOL) {.cdecl,
    importc: "XC_EnableErrorMessageBox", dynlib: xcgui, discardable.}

proc XC_EnableAutoExitApp*(bEnabel: BOOL) {.cdecl, importc: "XC_EnableAutoExitApp",
    dynlib: xcgui, discardable.}

proc XC_LoadLayout*(pFileName: ptr WCHAR; hParent: HXCGUI = nil): HXCGUI {.cdecl,
    importc: "XC_LoadLayout", dynlib: xcgui, discardable.}

proc XC_LoadLayoutZip*(pZipFileName: ptr WCHAR; pFileName: ptr WCHAR;
                      pPassword: ptr WCHAR = nil; hParent: HXCGUI = nil): HXCGUI {.
    cdecl, importc: "XC_LoadLayoutZip", dynlib: xcgui, discardable.}

proc XC_LoadLayoutFromString*(pStringXML: cstring; hParent: HXCGUI = nil): HXCGUI {.
    cdecl, importc: "XC_LoadLayoutFromString", dynlib: xcgui, discardable.}

proc XC_LoadResource*(pFileName: ptr WCHAR): BOOL {.cdecl,
    importc: "XC_LoadResource", dynlib: xcgui, discardable.}

proc XC_LoadResourceZip*(pZipFileName: ptr WCHAR; pFileName: ptr WCHAR;
                        pPassword: ptr WCHAR = nil): BOOL {.cdecl,
    importc: "XC_LoadResourceZip", dynlib: xcgui, discardable.}

proc XC_LoadResourceFromString*(pStringXML: cstring; pFileName: ptr WCHAR): BOOL {.
    cdecl, importc: "XC_LoadResourceFromString", dynlib: xcgui, discardable.}

proc XC_LoadStyle*(pFileName: ptr WCHAR): BOOL {.cdecl, importc: "XC_LoadStyle",
    dynlib: xcgui, discardable.}

proc XC_LoadStyleZip*(pZipFile: ptr WCHAR; pFileName: ptr WCHAR;
                     pPassword: ptr WCHAR = nil): BOOL {.cdecl,
    importc: "XC_LoadStyleZip", dynlib: xcgui, discardable.}

proc XC_GetTextSize*(pString: ptr WCHAR; length: cint; hFontX: HFONTX;
                    pOutSize: ptr SIZE) {.cdecl, importc: "XC_GetTextSize",
                                       dynlib: xcgui, discardable.}

proc XC_GetTextShowSize*(pString: ptr WCHAR; length: cint; hFontX: HFONTX;
                        pOutSize: ptr SIZE) {.cdecl, importc: "XC_GetTextShowSize",
    dynlib: xcgui, discardable.}

proc XC_GetDefaultFont*(): HFONTX {.cdecl, importc: "XC_GetDefaultFont", dynlib: xcgui, discardable.}
## 获取默认字体


proc XC_SetDefaultFont*(hFontX: HFONTX) {.cdecl, importc: "XC_SetDefaultFont",
                                       dynlib: xcgui, discardable.}
## 设置默认字体


proc XC_AddFileSearchPath*(pPath: ptr WCHAR) {.cdecl,
    importc: "XC_AddFileSearchPath", dynlib: xcgui, discardable.}

#~ proc XC_InitFont*(pFont: ptr LOGFONTW; pName: ptr WCHAR; size: cint;
                 #~ bBold: BOOL = FALSE; bItalic: BOOL = FALSE; bUnderline: BOOL = FALSE;
                 #~ bStrikeOut: BOOL = FALSE) {.cdecl, importc: "XC_InitFont",
    #~ dynlib: xcgui, discardable.}

proc XC_Malloc*(size: cint): pointer {.cdecl, importc: "XC_Malloc", dynlib: xcgui, discardable.}

proc XC_Free*(p: pointer) {.cdecl, importc: "XC_Free", dynlib: xcgui, discardable.}

#~ proc _XC_SetType*(hXCGUI: HXCGUI; nType: XC_OBJECT_TYPE) {.cdecl,
    #~ importc: "_XC_SetType", dynlib: xcgui, discardable.}

#~ proc _XC_AddType*(hXCGUI: HXCGUI; nType: XC_OBJECT_TYPE) {.cdecl,
    #~ importc: "_XC_AddType", dynlib: xcgui, discardable.}

#~ proc _XC_BindData*(hXCGUI: HXCGUI; data: cint) {.cdecl, importc: "_XC_BindData",
    #~ dynlib: xcgui, discardable.}

#~ proc _XC_GetBindData*(hXCGUI: HXCGUI): cint {.cdecl, importc: "_XC_GetBindData",
    #~ dynlib: xcgui, discardable.}

proc XC_Alert*(pText: ptr WCHAR; pTitle: ptr WCHAR) {.cdecl, importc: "XC_Alert",
    dynlib: xcgui, discardable.}

proc XC_Sys_ShellExecute*(hwnd: HWND; lpOperation: ptr WCHAR; lpFile: ptr WCHAR;
                         lpParameters: ptr WCHAR; lpDirectory: ptr WCHAR;
                         nShowCmd: cint): pointer {.cdecl,
    importc: "XC_Sys_ShellExecute", dynlib: xcgui, discardable.}

proc XC_LoadLibrary*(lpFileName: ptr WCHAR): HMODULE {.cdecl,
    importc: "XC_LoadLibrary", dynlib: xcgui, discardable.}

proc XC_GetProcAddress*(hModule: HMODULE; lpProcName: LPCSTR): FARPROC {.cdecl,
    importc: "XC_GetProcAddress", dynlib: xcgui, discardable.}

proc XC_FreeLibrary*(hModule: HMODULE): BOOL {.cdecl, importc: "XC_FreeLibrary",
    dynlib: xcgui, discardable.}

proc XC_LoadDll*(pDllFileName: ptr WCHAR): HMODULE {.cdecl, importc: "XC_LoadDll",
    dynlib: xcgui, discardable.}

proc XInitXCGUI*(pText: ptr WCHAR = nil): BOOL {.cdecl, importc: "XInitXCGUI",
    dynlib: xcgui, discardable.}

proc XRunXCGUI*() {.cdecl, importc: "XRunXCGUI", dynlib: xcgui, discardable.}

proc XExitXCGUI*() {.cdecl, importc: "XExitXCGUI", dynlib: xcgui, discardable.}


proc XC_PostQuitMessage*(nExitCode: cint) {.cdecl, importc: "XC_PostQuitMessage",
    dynlib: xcgui, discardable.}

proc XObj_GetType*(hXCGUI: HXCGUI): XC_OBJECT_TYPE {.cdecl, importc: "XObj_GetType",
    dynlib: xcgui, discardable.}

proc XObj_GetTypeBase*(hXCGUI: HXCGUI): XC_OBJECT_TYPE {.cdecl,
    importc: "XObj_GetTypeBase", dynlib: xcgui, discardable.}

proc XObj_GetTypeEx*(hXCGUI: HXCGUI): XC_OBJECT_TYPE_EX {.cdecl,
    importc: "XObj_GetTypeEx", dynlib: xcgui, discardable.}

proc XUI_SetStyle*(hXCGUI: HXCGUI; nStyle: XC_OBJECT_STYLE) {.cdecl,
    importc: "XUI_SetStyle", dynlib: xcgui, discardable.}

proc XUI_GetStyle*(hXCGUI: HXCGUI): XC_OBJECT_STYLE {.cdecl, importc: "XUI_GetStyle",
    dynlib: xcgui, discardable.}

proc XWidget_IsShow*(hXCGUI: HXCGUI): BOOL {.cdecl, importc: "XWidget_IsShow",
    dynlib: xcgui, discardable.}
